# faq_bot

./: .gitignore  README.md  pyproject.toml  run_api.sh  run_etl.py  run_sample_requests.py
data/: businesses.db  dbdiagram.txt  locations.csv  locations_yelp.json  processed_locations_yelp.json  raw_locations_yelp_debug.json
data/docs/: dbdiagram.txt
src/: __init__.py  app.py  settings.py
src/models/: base.py  request.py  response.py
src/models/app/: base.py  business_data.py  request.py  response.py  validation.py
src/models/database/: sqlite.py  tables.py
src/routers/: answer.py  get_yelp_data.py  run_etl.py
src/utils/: database.py  generate_answer.py  logger.py  prompt_builder.py  state.py  validate_sql.py  yelp.py
src/utils/middleware/: auth.py  log.py
src/utils/prompts/generate_answer/: system.json  user.json
src/utils/prompts/generate_sql/: system.json  user.json
src/utils/prompts/validation/: system.json  user.json
